// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should routing work correctly Render SignIn page when navigate to url "/login with "NO_AUTH" status" 1`] = `
<div>
  <div
    class="page page--gray page--login"
  >
    <header
      class="header"
    >
      <div
        class="container"
      >
        <div
          class="header__wrapper"
        >
          <div
            class="header__left"
          >
            <a
              class="header__logo-link"
              href="/"
            >
              <img
                alt="6 cities logo"
                class="header__logo"
                height="41"
                src="img/logo.svg"
                width="81"
              />
            </a>
          </div>
          <nav
            class="header__nav"
          >
            <ul
              class="header__nav-list"
            >
              <li
                class="header__nav-item user"
                style="display: flex;"
              >
                <a
                  class="header__nav-link header__nav-link--profile"
                  href="/favorites"
                >
                  <div
                    class="header__avatar-wrapper user__avatar-wrapper"
                    style="background-image: url(img/avatar.jpg);"
                  />
                  <span
                    class="header__user-name user__name"
                  >
                    Sign in
                  </span>
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </header>
    <main
      class="page__main page__main--login"
    >
      <div
        class="page__login-container container"
      >
        <section
          class="login"
        >
          <h1
            class="login__title"
          >
            Sign in
          </h1>
          <form
            action="#"
            class="login__form form"
            method="post"
          >
            <div
              class="login__input-wrapper form__input-wrapper"
            >
              <label
                class="visually-hidden"
              >
                E-mail
              </label>
              <input
                class="login__input form__input"
                name="email"
                placeholder="Email"
                type="email"
                value=""
              />
            </div>
            <div
              class="login__input-wrapper form__input-wrapper"
            >
              <label
                class="visually-hidden"
              >
                Password
              </label>
              <input
                class="login__input form__input"
                name="password"
                placeholder="Password"
                type="password"
                value=""
              />
            </div>
            <button
              class="login__submit form__submit button"
              type="submit"
            >
              Sign in
            </button>
          </form>
        </section>
        <section
          class="locations locations--login locations--current"
        >
          <div
            class="locations__item"
          >
            <a
              class="locations__item-link"
            >
              <span>
                Amsterdam
              </span>
            </a>
          </div>
        </section>
      </div>
    </main>
  </div>
</div>
`;

exports[`Should routing work correctly Render SignIn page when navigate to url "/login" with "AUTH" status 1`] = `
<div>
  <div
    class="page page--gray page--main"
  >
    <header
      class="header"
    >
      <div
        class="container"
      >
        <div
          class="header__wrapper"
        >
          <div
            class="header__left"
          >
            <a
              class="header__logo-link header__logo-link--active"
              href="/"
            >
              <img
                alt="6 cities logo"
                class="header__logo"
                height="41"
                src="img/logo.svg"
                width="81"
              />
            </a>
          </div>
          <nav
            class="header__nav"
          >
            <ul
              class="header__nav-list"
            >
              <li
                class="header__nav-item user"
                style="display: flex;"
              >
                <a
                  class="header__nav-link header__nav-link--profile"
                  href="/favorites"
                >
                  <div
                    class="header__avatar-wrapper user__avatar-wrapper"
                    style="background-image: url(img/avatar.jpg);"
                  />
                  <span
                    class="header__user-name user__name"
                  >
                    Oliver.conner@gmail.com
                  </span>
                </a>
                <button
                  class="button"
                  style="margin-left: 10px; width: 18px; height: 18px; background-image: url(../img/logout.svg);"
                />
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </header>
    <main
      class="page__main page__main--index page__main--index-empty"
    >
      <h1
        class="visually-hidden"
      >
        Cities
      </h1>
      <div
        class="tabs"
      >
        <section
          class="locations container"
        >
          <ul
            class="locations__list tabs__list"
          >
            <li
              class="locations__item"
            >
              <a
                class="locations__item-link tabs__item  tabs__item--active"
                href="#"
              >
                <span>
                  Paris
                </span>
              </a>
            </li>
            <li
              class="locations__item"
            >
              <a
                class="locations__item-link tabs__item "
                href="#"
              >
                <span>
                  Cologne
                </span>
              </a>
            </li>
            <li
              class="locations__item"
            >
              <a
                class="locations__item-link tabs__item "
                href="#"
              >
                <span>
                  Brussels
                </span>
              </a>
            </li>
            <li
              class="locations__item"
            >
              <a
                class="locations__item-link tabs__item "
                href="#"
              >
                <span>
                  Amsterdam
                </span>
              </a>
            </li>
            <li
              class="locations__item"
            >
              <a
                class="locations__item-link tabs__item "
                href="#"
              >
                <span>
                  Hamburg
                </span>
              </a>
            </li>
            <li
              class="locations__item"
            >
              <a
                class="locations__item-link tabs__item "
                href="#"
              >
                <span>
                  Dusseldorf
                </span>
              </a>
            </li>
          </ul>
        </section>
      </div>
      <div
        class="cities"
      >
        <div
          class="cities__status-wrapper"
          style="background-image: url(../img/spinner.gif); background-size: 90px 70px;"
        >
          <b
            class="cities__status"
          >
            Loading...
          </b>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Should routing work correctly Render main page when navigate to url "/" 1`] = `
<div>
  <div
    class="page page--gray page--main"
  >
    <header
      class="header"
    >
      <div
        class="container"
      >
        <div
          class="header__wrapper"
        >
          <div
            class="header__left"
          >
            <a
              class="header__logo-link header__logo-link--active"
              href="/"
            >
              <img
                alt="6 cities logo"
                class="header__logo"
                height="41"
                src="img/logo.svg"
                width="81"
              />
            </a>
          </div>
          <nav
            class="header__nav"
          >
            <ul
              class="header__nav-list"
            >
              <li
                class="header__nav-item user"
                style="display: flex;"
              >
                <a
                  class="header__nav-link header__nav-link--profile"
                  href="/favorites"
                >
                  <div
                    class="header__avatar-wrapper user__avatar-wrapper"
                    style="background-image: url(img/avatar.jpg);"
                  />
                  <span
                    class="header__user-name user__name"
                  >
                    Sign in
                  </span>
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </header>
    <main
      class="page__main page__main--index page__main--index-empty"
    >
      <h1
        class="visually-hidden"
      >
        Cities
      </h1>
      <div
        class="tabs"
      >
        <section
          class="locations container"
        >
          <ul
            class="locations__list tabs__list"
          >
            <li
              class="locations__item"
            >
              <a
                class="locations__item-link tabs__item  tabs__item--active"
                href="#"
              >
                <span>
                  Paris
                </span>
              </a>
            </li>
            <li
              class="locations__item"
            >
              <a
                class="locations__item-link tabs__item "
                href="#"
              >
                <span>
                  Cologne
                </span>
              </a>
            </li>
            <li
              class="locations__item"
            >
              <a
                class="locations__item-link tabs__item "
                href="#"
              >
                <span>
                  Brussels
                </span>
              </a>
            </li>
            <li
              class="locations__item"
            >
              <a
                class="locations__item-link tabs__item "
                href="#"
              >
                <span>
                  Amsterdam
                </span>
              </a>
            </li>
            <li
              class="locations__item"
            >
              <a
                class="locations__item-link tabs__item "
                href="#"
              >
                <span>
                  Hamburg
                </span>
              </a>
            </li>
            <li
              class="locations__item"
            >
              <a
                class="locations__item-link tabs__item "
                href="#"
              >
                <span>
                  Dusseldorf
                </span>
              </a>
            </li>
          </ul>
        </section>
      </div>
      <div
        class="cities"
      >
        <div
          class="cities__status-wrapper"
          style="background-image: url(../img/spinner.gif); background-size: 90px 70px;"
        >
          <b
            class="cities__status"
          >
            Loading...
          </b>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Should routing work correctly Render room page when navigate to url "/favorite" with "AUTH" status 1`] = `
<div>
  <div
    class="page"
  >
    <header
      class="header"
    >
      <div
        class="container"
      >
        <div
          class="header__wrapper"
        >
          <div
            class="header__left"
          >
            <a
              class="header__logo-link"
              href="/"
            >
              <img
                alt="6 cities logo"
                class="header__logo"
                height="41"
                src="img/logo.svg"
                width="81"
              />
            </a>
          </div>
          <nav
            class="header__nav"
          >
            <ul
              class="header__nav-list"
            >
              <li
                class="header__nav-item user"
                style="display: flex;"
              >
                <a
                  class="header__nav-link header__nav-link--profile"
                  href="/favorites"
                >
                  <div
                    class="header__avatar-wrapper user__avatar-wrapper"
                    style="background-image: url(img/avatar.jpg);"
                  />
                  <span
                    class="header__user-name user__name"
                  >
                    Oliver.conner@gmail.com
                  </span>
                </a>
                <button
                  class="button"
                  style="margin-left: 10px; width: 18px; height: 18px; background-image: url(../img/logout.svg);"
                />
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </header>
    <main
      class="page__main page__main--favorites"
    >
      <div
        class="page__favorites-container container"
      >
        <section
          class="favorites"
        >
          <h1
            class="favorites__title"
          >
            Saved listing
          </h1>
          <ul
            class="favorites__list"
          >
            <li
              class="favorites__locations-items"
            >
              <div
                class="favorites__locations locations locations--current"
              >
                <div
                  class="locations__item"
                >
                  <a
                    class="locations__item-link"
                    href="/"
                  >
                    <span>
                      Amsterdam
                    </span>
                  </a>
                </div>
              </div>
              <div
                class="favorites__places"
              >
                <article
                  class="favorites__card place-card"
                >
                  <div
                    class="favorites__image-wrapper place-card__image-wrapper"
                  >
                    <a
                      href="/offer/5"
                    >
                      <img
                        alt="Place image"
                        class="place-card__image"
                        height="110"
                        src="img/img.jpg"
                        width="150"
                      />
                    </a>
                  </div>
                  <div
                    class="favorites__card-info place-card__info"
                  >
                    <div
                      class="place-card__price-wrapper"
                    >
                      <div
                        class="place-card__price"
                      >
                        <b
                          class="place-card__price-value"
                        >
                          €
                          210
                        </b>
                        <span
                          class="place-card__price-text"
                        >
                          / night
                        </span>
                      </div>
                      <button
                        class="place-card__bookmark-button button  place-card__bookmark-button--active"
                        type="button"
                      >
                        <svg
                          class="place-card__bookmark-icon"
                          height="19"
                          width="18"
                        >
                          <use
                            xlink:href="#icon-bookmark"
                          >
                             
                          </use>
                        </svg>
                        <span
                          class="visually-hidden"
                        >
                          In bookmarks
                        </span>
                      </button>
                    </div>
                    <div
                      class="place-card__rating rating"
                    >
                      <div
                        class="place-card__stars rating__stars"
                      >
                        <span
                          style="width: 80%;"
                        />
                      </div>
                    </div>
                    <h2
                      class="place-card__name"
                    >
                      <a
                        href="/offer/5"
                      >
                        Cityden Residences Museum Square
                      </a>
                    </h2>
                    <p
                      class="place-card__type"
                    >
                      Apartment
                    </p>
                  </div>
                </article>
              </div>
            </li>
          </ul>
        </section>
      </div>
    </main>
    <footer
      class="footer container"
    >
      <a
        class="footer__logo-link"
        href="/"
      >
        <img
          alt="6 cities logo"
          class="footer__logo"
          height="33"
          src="img/logo.svg"
          width="64"
        />
      </a>
    </footer>
  </div>
</div>
`;

exports[`Should routing work correctly Render room page when navigate to url "/favorite" with "AUTH" status 2`] = `
<div>
  <div
    class="page page--gray page--login"
  >
    <header
      class="header"
    >
      <div
        class="container"
      >
        <div
          class="header__wrapper"
        >
          <div
            class="header__left"
          >
            <a
              class="header__logo-link"
              href="/"
            >
              <img
                alt="6 cities logo"
                class="header__logo"
                height="41"
                src="img/logo.svg"
                width="81"
              />
            </a>
          </div>
          <nav
            class="header__nav"
          >
            <ul
              class="header__nav-list"
            >
              <li
                class="header__nav-item user"
                style="display: flex;"
              >
                <a
                  class="header__nav-link header__nav-link--profile"
                  href="/favorites"
                >
                  <div
                    class="header__avatar-wrapper user__avatar-wrapper"
                    style="background-image: url(img/avatar.jpg);"
                  />
                  <span
                    class="header__user-name user__name"
                  >
                    Sign in
                  </span>
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </header>
    <main
      class="page__main page__main--login"
    >
      <div
        class="page__login-container container"
      >
        <section
          class="login"
        >
          <h1
            class="login__title"
          >
            Sign in
          </h1>
          <form
            action="#"
            class="login__form form"
            method="post"
          >
            <div
              class="login__input-wrapper form__input-wrapper"
            >
              <label
                class="visually-hidden"
              >
                E-mail
              </label>
              <input
                class="login__input form__input"
                name="email"
                placeholder="Email"
                type="email"
                value=""
              />
            </div>
            <div
              class="login__input-wrapper form__input-wrapper"
            >
              <label
                class="visually-hidden"
              >
                Password
              </label>
              <input
                class="login__input form__input"
                name="password"
                placeholder="Password"
                type="password"
                value=""
              />
            </div>
            <button
              class="login__submit form__submit button"
              type="submit"
            >
              Sign in
            </button>
          </form>
        </section>
        <section
          class="locations locations--login locations--current"
        >
          <div
            class="locations__item"
          >
            <a
              class="locations__item-link"
            >
              <span>
                Amsterdam
              </span>
            </a>
          </div>
        </section>
      </div>
    </main>
  </div>
</div>
`;

exports[`Should routing work correctly Render room page when navigate to url "/offer/:id" 1`] = `
<div>
  <div
    class="page"
  >
    <header
      class="header"
    >
      <div
        class="container"
      >
        <div
          class="header__wrapper"
        >
          <div
            class="header__left"
          >
            <a
              class="header__logo-link"
              href="/"
            >
              <img
                alt="6 cities logo"
                class="header__logo"
                height="41"
                src="img/logo.svg"
                width="81"
              />
            </a>
          </div>
          <nav
            class="header__nav"
          >
            <ul
              class="header__nav-list"
            >
              <li
                class="header__nav-item user"
                style="display: flex;"
              >
                <a
                  class="header__nav-link header__nav-link--profile"
                  href="/favorites"
                >
                  <div
                    class="header__avatar-wrapper user__avatar-wrapper"
                    style="background-image: url(img/avatar.jpg);"
                  />
                  <span
                    class="header__user-name user__name"
                  >
                    Oliver.conner@gmail.com
                  </span>
                </a>
                <button
                  class="button"
                  style="margin-left: 10px; width: 18px; height: 18px; background-image: url(../img/logout.svg);"
                />
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </header>
    <main
      class="page__main page__main--property"
    >
      <section
        class="property"
      >
        <div
          class="property__gallery-container container"
        >
          <div
            class="property__gallery"
          >
            <div
              class="property__image-wrapper"
            >
              <img
                alt="Photo studio"
                class="property__image"
                src="img/img.jpg"
              />
            </div>
            <div
              class="property__image-wrapper"
            >
              <img
                alt="Photo studio"
                class="property__image"
                src="img/img1.jpg"
              />
            </div>
            <div
              class="property__image-wrapper"
            >
              <img
                alt="Photo studio"
                class="property__image"
                src="img/img2.jpg"
              />
            </div>
            <div
              class="property__image-wrapper"
            >
              <img
                alt="Photo studio"
                class="property__image"
                src="img/img3.jpg"
              />
            </div>
            <div
              class="property__image-wrapper"
            >
              <img
                alt="Photo studio"
                class="property__image"
                src="img/img4.jpg"
              />
            </div>
            <div
              class="property__image-wrapper"
            >
              <img
                alt="Photo studio"
                class="property__image"
                src="img/img5.jpg"
              />
            </div>
          </div>
        </div>
        <div
          class="property__container container"
        >
          <div
            class="property__wrapper"
          >
            <div
              class="property__mark"
            >
              <span>
                Premium
              </span>
            </div>
            <div
              class="property__name-wrapper"
            >
              <h1
                class="property__name"
              >
                Cityden Residences Museum Square
              </h1>
              <button
                class="property__bookmark-button button  property__bookmark-button--active"
                type="button"
              >
                <svg
                  class="property__bookmark-icon"
                  height="33"
                  width="31"
                >
                  <use
                    xlink:href="#icon-bookmark"
                  >
                     
                  </use>
                </svg>
                <span
                  class="visually-hidden"
                >
                  In bookmarks
                </span>
              </button>
            </div>
            <div
              class="property__rating rating"
            >
              <div
                class="property__stars rating__stars"
              >
                <span
                  style="width: 80%;"
                />
                <span
                  class="visually-hidden"
                >
                  Rating
                </span>
              </div>
              <span
                class="property__rating-value rating__value"
              >
                4.1
              </span>
            </div>
            <ul
              class="property__features"
            >
              <li
                class="property__feature property__feature--entire"
              >
                Apartment
              </li>
              <li
                class="property__feature property__feature--bedrooms"
              >
                2 Bedrooms
              </li>
              <li
                class="property__feature property__feature--adults"
              >
                Max 4 adults
              </li>
            </ul>
            <div
              class="property__price"
            >
              <b
                class="property__price-value"
              >
                €
                210
              </b>
              <span
                class="property__price-text"
              >
                 night
              </span>
            </div>
            <div
              class="property__inside"
            >
              <h2
                class="property__inside-title"
              >
                What's inside
              </h2>
              <ul
                class="property__inside-list"
              >
                <li
                  class="property__inside-item"
                >
                  Air conditioning
                </li>
                <li
                  class="property__inside-item"
                >
                  Private Bathroom
                </li>
                <li
                  class="property__inside-item"
                >
                  Dishwasher
                </li>
                <li
                  class="property__inside-item"
                >
                  Flat - screen TV
                </li>
                <li
                  class="property__inside-item"
                >
                  Coffee machine
                </li>
                <li
                  class="property__inside-item"
                >
                  Free WiFi
                </li>
              </ul>
            </div>
            <div
              class="property__host"
            >
              <h2
                class="property__host-title"
              >
                Meet the host
              </h2>
              <div
                class="property__host-user user"
              >
                <div
                  class="property__avatar-wrapper property__avatar-wrapper--pro user__avatar-wrapper"
                >
                  <img
                    alt="Host avatar"
                    class="property__avatar user__avatar"
                    height="74"
                    src="img/avatar.jpg"
                    width="74"
                  />
                </div>
                <span
                  class="property__user-name"
                >
                  Mick
                </span>
              </div>
              <div
                class="property__description"
              >
                <p
                  class="property__text"
                >
                  In the center of Paris, Citadines Saint-Germain-des-Prés Paris is a 10-minute walk from Notre-Dame Cathedral and 293 m from Saint-Michel Metro Station. It features a fitness room and free Wi-Fi access.
                </p>
              </div>
            </div>
            <section
              class="property__reviews reviews"
            >
              <h2
                class="reviews__title"
              >
                Reviews · 
                <span
                  class="reviews__amount"
                >
                  0
                </span>
              </h2>
              <ul
                class="reviews__list"
              />
              <form
                action="#"
                class="reviews__form form"
                method="post"
              >
                <fieldset>
                  <div
                    class="reviews__rating-form form__rating"
                  >
                    <input
                      class="form__rating-input visually-hidden"
                      id="5-stars"
                      name="rating"
                      type="radio"
                      value="5"
                    />
                    <label
                      class="reviews__rating-label form__rating-label"
                      for="5-stars"
                      title="perfect"
                    >
                      <svg
                        class="form__star-image"
                        height="33"
                        width="37"
                      >
                        <use
                          xlink:href="#icon-star"
                        />
                      </svg>
                    </label>
                    <input
                      class="form__rating-input visually-hidden"
                      id="4-stars"
                      name="rating"
                      type="radio"
                      value="4"
                    />
                    <label
                      class="reviews__rating-label form__rating-label"
                      for="4-stars"
                      title="good"
                    >
                      <svg
                        class="form__star-image"
                        height="33"
                        width="37"
                      >
                        <use
                          xlink:href="#icon-star"
                        />
                      </svg>
                    </label>
                    <input
                      class="form__rating-input visually-hidden"
                      id="3-stars"
                      name="rating"
                      type="radio"
                      value="3"
                    />
                    <label
                      class="reviews__rating-label form__rating-label"
                      for="3-stars"
                      title="not bad"
                    >
                      <svg
                        class="form__star-image"
                        height="33"
                        width="37"
                      >
                        <use
                          xlink:href="#icon-star"
                        />
                      </svg>
                    </label>
                    <input
                      class="form__rating-input visually-hidden"
                      id="2-stars"
                      name="rating"
                      type="radio"
                      value="2"
                    />
                    <label
                      class="reviews__rating-label form__rating-label"
                      for="2-stars"
                      title="badly"
                    >
                      <svg
                        class="form__star-image"
                        height="33"
                        width="37"
                      >
                        <use
                          xlink:href="#icon-star"
                        />
                      </svg>
                    </label>
                    <input
                      class="form__rating-input visually-hidden"
                      id="1-stars"
                      name="rating"
                      type="radio"
                      value="1"
                    />
                    <label
                      class="reviews__rating-label form__rating-label"
                      for="1-stars"
                      title="terribly"
                    >
                      <svg
                        class="form__star-image"
                        height="33"
                        width="37"
                      >
                        <use
                          xlink:href="#icon-star"
                        />
                      </svg>
                    </label>
                  </div>
                  <textarea
                    class="reviews__textarea form__textarea"
                    data-testid="review"
                    id="review"
                    name="review"
                    placeholder="Tell how was your stay, what you like and what can be improved"
                  />
                  <div
                    class="reviews__button-wrapper"
                  >
                    <p
                      class="reviews__help"
                    >
                      To submit review please make sure to set 
                      <span
                        class="reviews__star"
                      >
                        rating
                      </span>
                       and describe your stay with at least 
                      <b
                        class="reviews__text-amount"
                      >
                        50 characters
                      </b>
                      .
                    </p>
                    <button
                      class="reviews__submit form__submit button"
                      disabled=""
                      type="submit"
                    >
                      Submit
                    </button>
                  </div>
                </fieldset>
              </form>
            </section>
          </div>
        </div>
        <section
          class="property__map map"
        >
          <div
            class="leaflet-container leaflet-grab leaflet-touch-drag"
            id="map"
            style="height: 100%; width: 100%; position: relative;"
            tabindex="0"
          >
            <div
              class="leaflet-pane leaflet-map-pane"
              style="left: 0px; top: 0px;"
            >
              <div
                class="leaflet-pane leaflet-tile-pane"
              >
                <div
                  class="leaflet-layer "
                  style="z-index: 1;"
                >
                  <div
                    class="leaflet-tile-container leaflet-zoom-animated"
                    style="z-index: 18; left: 0px; top: 0px;"
                  >
                    <img
                      alt=""
                      class="leaflet-tile"
                      role="presentation"
                      src="https://c.basemaps.cartocdn.com/rastertiles/voyager/12/2103/1346.png"
                      style="width: 256px; height: 256px; left: -186px; top: -5px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="leaflet-pane leaflet-shadow-pane"
              />
              <div
                class="leaflet-pane leaflet-overlay-pane"
              />
              <div
                class="leaflet-pane leaflet-marker-pane"
              >
                <img
                  alt=""
                  class="leaflet-marker-icon leaflet-zoom-hide leaflet-interactive"
                  src="img/pin-active.svg"
                  style="margin-left: -13.5px; margin-top: -19.5px; width: 27px; height: 39px; left: -130px; top: -78px; z-index: -78;"
                  tabindex="0"
                  title="Cityden Residences Museum Square"
                />
              </div>
              <div
                class="leaflet-pane leaflet-tooltip-pane"
              />
              <div
                class="leaflet-pane leaflet-popup-pane"
              />
            </div>
            <div
              class="leaflet-control-container"
            >
              <div
                class="leaflet-top leaflet-left"
              />
              <div
                class="leaflet-top leaflet-right"
              />
              <div
                class="leaflet-bottom leaflet-left"
              />
              <div
                class="leaflet-bottom leaflet-right"
              >
                <div
                  class="leaflet-control-attribution leaflet-control"
                >
                  <a
                    href="https://leafletjs.com"
                    title="A JS library for interactive maps"
                  >
                    Leaflet
                  </a>
                   | © 
                  <a
                    href="https://www.openstreetmap.org/copyright"
                  >
                    OpenStreetMap
                  </a>
                   contributors © 
                  <a
                    href="https://carto.com/attributions"
                  >
                    CARTO
                  </a>
                </div>
              </div>
            </div>
          </div>
        </section>
      </section>
      <div
        class="container"
      >
        <section
          class="near-places places"
        >
          <h2
            class="near-places__title"
          />
          <div
            class="near-places__list places__list"
          />
        </section>
      </div>
    </main>
  </div>
</div>
`;
